--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -6,10 +6,55 @@ pt-BR:
       title: Editar
     show:
       title: Vizualizar
+      perfil: "Perfil: %{user_name}"
+      edit: 'Editar perfil'
+      location: "Localização: %{location}"
+      bio: "Bio: %{bio}"
   links:
     back: Voltar
     home: Home
     destroy: Deletar
+  user_sessions:
+    new:
+      title: 'Login'
+      sign_up: 'Cadastre-se'
+    signup:
+      confirm_email:
+  layout:
+    rooms: Quartos
+    signup: Cadastro
+  general:
+    form_error: Há erros no formulário, por favor verifique.
+
+  signup:
+    confirm_email:
+      subject: 'Colcho.net - Confirme seu email'
+      title: 'Seja bem vindo ao Colcho.net!'
+      body: |
+          Seja bem vindo ao Colcho.net, %{full_name}.
+          O Colcho.net é o lugar ideal para você alugar aquele quarto
+          sobrando na sua casa e ainda conhecer gente do mundo inteiro.
+      confirm_link_html: 'Para você começar a usar o site, acesse o link: %{link}'
+      thanks_html: 'Obrigado por se cadastrar no %{link}.'
+
+  confirmations:
+    success: Email confirmado com sucesso, obrigado!
+
+  layout:
+    rooms: Quartos
+    new_room: Cadastre seu quarto!
+    signup: Cadastro
+    signin: Login
+    my_profile: Meu perfil
+    signout: Logout
+
+  flash:
+    alert:
+      needs_login: "Você precisa estar logado para continuar"
+    notice:
+      signed_in: 'Login efetuado com sucesso!'
+      signed_out: 'Logout efetuado com sucesso. Até logo!'
+      already_logged_in: "Você já está logado."
 
   activerecord:
     models:
@@ -27,3 +72,21 @@ pt-BR:
         description: Descrição
         location: Localização
         title: Título
+
+  activemodel:
+    attributes:
+      user_session:
+        email: Email
+        password: Senha
+    errors:
+      messages:
+        invalid_login: 'Usuário ou senha inválidos'
+
+  helpers:
+    submit:
+      submit:
+        create: Criar %{model}
+        submit: Salvar %{model}
+        update: Atualizar %{model}
+      user_session:
+        create: 'Entrar'
